Fix in/out ports overflowing

--- a/trevor/src/index.css
+++ b/trevor/src/index.css
@@ -235,6 +235,7 @@ input[type="text"]:disabled {
 	align-items: center;
 	justify-content: flex-start;
 	padding: 10px;
+	overflow: auto;
 }
 
 .instance-creation-midi-output {
